# scot

./: Cargo.toml
examples/chat-server/api/: Cargo.toml
examples/chat-server/api/src/: api.rs
examples/chat-server/basic-client/: Cargo.toml
examples/chat-server/basic-client/src/: handler.rs  input.rs  lib.rs
examples/chat-server/basic-server/: Cargo.toml
examples/chat-server/basic-server/src/: handler.rs  state.rs
examples/chat-server/split-data-server/: Cargo.toml
examples/chat-server/split-data-server/src/: handler.rs  lib.rs  state.rs
scot/: Cargo.toml
scot/src/: lib.rs  types.rs
scot/src/client/: mod.rs
scot/src/server/: mod.rs  recipients.rs  state.rs
