[package]
name = "chat-server-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "chat_api"
path = "src/lib.rs"

[dependencies]
scot = { path = "../../../scot/" }

serde = { version = "1", features = ["derive"] }
uuid = { version = "1.3", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
