[package]
name = "basic-chat-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "basic_chat_client"
path = "src/lib.rs"

[[bin]]
name = "basic-chat-client-bin"
path = "src/bin/main.rs"

[dependencies]
scot = { path = "../../../scot/" }
basic-chat-server = { path = "../basic-server/" }
chat-server-api = { path = "../api/" }

anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
