[package]
name = "split-data-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "split_data_server"
path = "src/lib.rs"

[[bin]]
name = "split-data-server-bin"
path = "src/bin/main.rs"

[dependencies]
scot = { path = "../../../scot/" }
chat-server-api = { path = "../api" }

anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.24", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.3", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
